<?xml version="1.0" encoding="utf-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ The MIT License (MIT)                                                                         ~
  ~                                                                                               ~
  ~ Copyright (c) 2015 - Julien Normand                                                           ~
  ~                                                                                               ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of this software ~
  ~ and associated documentation files (the "Software"),  to deal in the Software without         ~
  ~ restriction, including without limitation  the  rights to use, copy, modify, merge, publish,  ~
  ~ distribute, sublicense, and/or  sell copies of the Software, and to permit persons to whom the
  ~ Software is furnished to do so, subject to the following conditions:                          ~
  ~                                                                                               ~
  ~ The above copyright notice and this permission notice shall be included in all copies or      ~
  ~ substantial portions of the Software.                                                         ~
  ~                                                                                               ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING ~
  ~ BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND    ~
  ~ NON INFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, ~
  ~ DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING      ~
  ~ FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE. ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<resources>
    <!-- Application name -->
    <string name="app_name">Stentor</string>

    <!-- Others -->
    <string name="image_content">Image content</string>

    <!-- Navigation Drawer Items -->
    <string name="menu_start_service">Start Speech Service</string>
    <string name="menu_stop_service">Stop Speech Service</string>
    <string name="menu_list_command">Show available command</string>
    <string name="menu_home">Home</string>
    <string name="menu_maintenance">Maintenance</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help_feedback">Help &amp; feedback</string>

    <!-- List of available command -->
    <string name="speech_list_command_title">Available command</string>
    <string-array name="speech_list_command">
        <item>ouvrir application</item>
        <item>fermer application</item>
        <item>fermer service</item>
        <item>retour</item>
        <item>---------------</item>
        <item>accueil</item>
        <item>maintenance</item>
        <item>paramètres</item>
        <item>aide et commentaires</item>
        <item>---------------</item>
        <item>opération \"name of the object\"</item>
        <item>---------------</item>
        <item>démarrer</item>
        <item>précédent</item>
        <item>suivant</item>
        <item>répéter</item>
        <item>stop</item>
    </string-array>

    <!-- Home -->
    <string name="home_welcome">Welcome to the Stentor project, A4L project for the project Research and Innovation. \n\n Speech and Voice Recognizer</string>

    <!-- Maintenance -->
    <string name="maintenance_item_hour">%1$dh%2$dm%3$ds</string>
    <string name="maintenance_item_minute">%1$dm%2$ds</string>
    <string name="maintenance_item_second">%1$ds</string>

    <!-- Maintenance Details -->
    <string name="maintenance_detail_description">Description</string>
    <string name="maintenance_detail_duration">Duration</string>
    <string name="maintenance_detail_nb_step">Number of step</string>
    <string name="maintenance_detail_step">Step</string>
    <string name="maintenance_detail_step_detail">%1$s - %2$s</string>
    <string name="maintenance_detail_step_detail_none">No step active</string>

    <!-- Settings -->
    <string name="settings_language_app">App language</string>
    <string name="settings_language_app_info">Language used in the visualization app.</string>
    <string name="settings_language_voice">Voice language</string>
    <string name="settings_language_voice_info">Language used in the voice speech and recognise.</string>
    <string-array name="settings_language_choose">
        <item>EN</item>
        <item>FR</item>
    </string-array>
    <string name="settings_restart">Restart application to change language.</string>

    <!-- Help & Feedback -->
    <string name="help_feedback_libraries">Libraries</string>
    <string name="help_feedback_feedback">Feedback</string>
    <string name="help_feedback_popular">Popular</string>
    <string name="help_feedback_browse_article">Browse all articles</string>
    <string name="help_feedback_pop1">Article 1</string>
    <string name="help_feedback_pop2">Article 2</string>
    <string name="help_feedback_pop3">Article 3</string>
    <string name="help_feedback_pop4">Article 4</string>
    <string name="help_feedback_pop5">Article 5</string>

    <!-- License -->
    <string name="license_master_mit">Librairie sous licence "The MIT License (MIT)"</string>
    <string name="license_mit_snackbar"><u><a href="https://github.com/nispok/snackbar">SnackBar</a></u> by Nispok</string>
    <string name="license_master_apache">Librairies sous licence "The Android Open Source Project, Inc."</string>
    <string name="license_apache_recycler"><u><a href="https://developer.android.com/tools/support-library/features.html#v7-recyclerview">RecycleView</a></u> by Google</string>
    <string name="license_apache_cardview"><u><a href="https://developer.android.com/tools/support-library/features.html#v7-cardview">CardView</a></u> by Google</string>

    <!-- TODOList -->
    <string name="todo_more_info">More information on website.</string>
    <string name="todo_more_help">Launch more help on website.</string>
    <string name="todo_more_feedback">Launch Google Play Store feedback.</string>

    <!-- TTS -->
    <string name="tts_stop_service">Stop speech service</string>
    <string name="tts_open_home">Open home page</string>
    <string name="tts_open_maintenance">Open maintenance page</string>
    <string name="tts_open_settings">Open settings page</string>
    <string name="tts_open_help_feedback">Open help and feedback page</string>
    <string name="tts_operation_load">Load operation %s</string>
    <string name="tts_operation_unknown">Unable to find this operation</string>
    <string name="tts_step_stop">Stop listening step</string>
    <string name="tts_step_previous_error">No previous step</string>
    <string name="tts_step_next_error">No next step</string>
    <string name="tts_operation_not_start">Unable to make this command</string>

    <!-- Speech -->
    <string name="speech_notification_listening">Listening for actions</string>
    <string name="speech_notification_title">Speech Activation</string>
    <string name="speech_notification_close">Close</string>

</resources>
