<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:tools="http://schemas.android.com/tools"
	  tools:context="fr.exia.stentor.HomeActivity">

	<item
		android:id="@+id/action_speech_on"
		android:icon="@drawable/music_note"
		android:orderInCategory="100"
		android:showAsAction="ifRoom"
		android:title="@string/menu_start_service"/>

	<item
		android:id="@+id/action_speech_off"
		android:icon="@drawable/music_note_off"
		android:orderInCategory="100"
		android:showAsAction="ifRoom"
		android:title="@string/menu_stop_service"/>

	<item
		android:id="@+id/action_list_command"
		android:icon="@drawable/format_list_bulleted"
		android:orderInCategory="100"
		android:showAsAction="ifRoom"
		android:title="@string/menu_list_command"/>

	<!--<item-->
	<!--android:id="@+id/action_home"-->
	<!--android:orderInCategory="100"-->
	<!--android:title="@string/menu_home"-->

	<item
		android:id="@+id/action_maintenance"
		android:orderInCategory="100"
		android:title="@string/menu_maintenance"/>

	<item
		android:id="@+id/action_settings"
		android:orderInCategory="100"
		android:title="@string/menu_settings"/>

	<item
		android:id="@+id/action_help_feedback"
		android:orderInCategory="100"
		android:title="@string/menu_help_feedback"/>
</menu>
