<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ The MIT License (MIT)                                                                         ~
  ~                                                                                               ~
  ~ Copyright (c) 2015 - Julien Normand                                                           ~
  ~                                                                                               ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of this software ~
  ~ and associated documentation files (the "Software"),  to deal in the Software without         ~
  ~ restriction, including without limitation  the  rights to use, copy, modify, merge, publish,  ~
  ~ distribute, sublicense, and/or  sell copies of the Software, and to permit persons to whom the
  ~ Software is furnished to do so, subject to the following conditions:                          ~
  ~                                                                                               ~
  ~ The above copyright notice and this permission notice shall be included in all copies or      ~
  ~ substantial portions of the Software.                                                         ~
  ~                                                                                               ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING ~
  ~ BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND    ~
  ~ NON INFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, ~
  ~ DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING      ~
  ~ FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE. ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="fr.exia.stentor.MaintenanceDetailActivity">

    <item
        android:id="@+id/action_speech_on"
        android:icon="@drawable/music_note"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu_start_service" />

    <item
        android:id="@+id/action_speech_off"
        android:icon="@drawable/music_note_off"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu_stop_service" />

    <item
        android:id="@+id/action_list_command"
        android:icon="@drawable/format_list_bulleted"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu_list_command" />

    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/action_maintenance"
        android:orderInCategory="100"
        android:title="@string/menu_maintenance" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/menu_settings" />

    <item
        android:id="@+id/action_help_feedback"
        android:orderInCategory="100"
        android:title="@string/menu_help_feedback" />
</menu>
