<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:card_view="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_marginBottom="@dimen/margin_app_small"
	android:layout_marginTop="@dimen/margin_app_small"
	android:minHeight="48dp"
	card_view:cardCornerRadius="4dp">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentStart="true"
			android:layout_toStartOf="@+id/item_maintenance_time"
			android:orientation="vertical"
			android:paddingBottom="20dp"
			android:paddingLeft="@dimen/margin_app"
			android:paddingRight="@dimen/margin_app"
			android:paddingTop="20dp">

			<fr.exia.stentor.component.TextViewRobotoNoto
				android:id="@+id/item_maintenance_name"
				style="@style/Text.Body_1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="0dp"
				android:singleLine="true"
				android:text="@string/settings_language_app"/>

			<fr.exia.stentor.component.TextViewRobotoNoto
				android:id="@+id/item_maintenance_description"
				style="@style/Text.Caption"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:singleLine="true"
				android:text="@string/settings_language_app_info"/>

		</LinearLayout>

		<fr.exia.stentor.component.TextViewRobotoNoto
			android:id="@+id/item_maintenance_time"
			style="@style/Text.Caption"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentEnd="true"
			android:layout_alignParentTop="true"
			android:layout_gravity="center|top"
			android:entries="@array/settings_language_choose"
			android:gravity="end"
			android:paddingEnd="@dimen/margin_app"
			android:paddingTop="@dimen/margin_app_small"
			android:text="@string/maintenance_item_hour"/>

	</RelativeLayout>
</android.support.v7.widget.CardView>